🎉 Initial commit for the Go reimplementation