@@ -1,53 +1,28 @@
 ### Build Image ###
 FROM --platform=$BUILDPLATFORM alpine:edge AS BUILD_IMAGE
-ARG TARGETPLATFORM
+ARG TARGETARCH
+ARG VERSION
 
-# Installing OpenJDK 17
-RUN apk add --no-cache openjdk17 --repository=https://dl-cdn.alpinelinux.org/alpine/edge/community
+# Installing UnZip
+RUN apk add --no-cache go --repository=https://dl-cdn.alpinelinux.org/alpine/edge/community
 
 # Build project
-COPY . /rmd
-WORKDIR /rmd
-RUN ./gradlew shadowJar
-
-### JRE Image ###
-FROM alpine:edge AS JRE_IMAGE
-
-# Installing OpenJDK 17
-RUN apk add --no-cache openjdk17 binutils --repository=https://dl-cdn.alpinelinux.org/alpine/edge/community
-
-WORKDIR /tmp
-COPY --from=BUILD_IMAGE /rmd/build/libs/rmd.jar /tmp/rmd.jar
-RUN unzip rmd.jar
-RUN jdeps --print-module-deps --ignore-missing-deps --recursive --multi-release 17 \
-    --class-path="BOOT-INF/lib/*" --module-path="BOOT-INF/lib/*" rmd.jar > /deps.txt
-
-# Build small JRE image
-RUN jlink --verbose \
-         --add-modules $(cat /deps.txt) \
-         --add-modules jdk.crypto.ec \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /customjre
+COPY . /reddit
+WORKDIR /reddit
+RUN sed -i "s/<version>/$VERSION/g" main.go
+RUN GOARCH=$TARGETARCH go build -o reddit-dl
 
 ### Main Image ###
 FROM alpine:edge
 LABEL maintainer="Vinicius Egidio <me@vinicius.io>"
 
 # Dependencies
-RUN apk add --no-cache yt-dlp libwebp-tools ffmpeg --repository=https://dl-cdn.alpinelinux.org/alpine/edge/community
-
-# Create custom JRE
-ENV JAVA_HOME=/jre
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-COPY --from=JRE_IMAGE /customjre $JAVA_HOME
+RUN apk add --no-cache libwebp-tools ffmpeg --repository=https://dl-cdn.alpinelinux.org/alpine/edge/community
 
 # Define the image version
 ARG VERSION
 ENV IMAGE_VERSION=$VERSION
 
-COPY --from=BUILD_IMAGE /rmd/build/libs/rmd.jar /var/rmd.jar
+COPY --from=BUILD_IMAGE /reddit/reddit-dl /usr/local/bin/
 
-CMD ["java", "-jar", "/var/rmd.jar"]
+CMD ["reddit-dl", "-d", "/tmp/reddit"]
